added images to to store, im  not done yet, i have to work with css for the store and make it look better.

--- a/STORES/HomeStore.html
+++ b/STORES/HomeStore.html
@@ -80,7 +80,7 @@
   <div class="container">
       <!-- Product 1 -->
       <div class="product">
-          <img src="/homes/kitchenlove2.jpg" alt="Product 1">
+          <img src="/Interior-Home-Design/homes/kitchen1.jpg" alt="Product 1">
           <div class="product-info">
               <h2>Product 1</h2>
               <p>Description of Product 1.</p>
@@ -91,7 +91,7 @@
 
       <!-- Product 2 -->
       <div class="product">
-          <img src="/homes/life.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/kitchenlove.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -101,7 +101,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/homes/life1.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/dining.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -111,7 +111,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/homes/techlove.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/kitchenlove3.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -121,7 +121,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/homes/penthouse.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/kitchen3.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -131,7 +131,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/homes/kitchenlove.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/penthouse.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -141,7 +141,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/homes/kitchen2.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/kitchenlove3.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -151,7 +151,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/homes/room1.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/life.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -161,7 +161,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/homes/kitchenlove3.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/kitchenlove.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -171,7 +171,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/homes/nature.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/room1.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -181,7 +181,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/homes/livingroom.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/nature.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -191,7 +191,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/homes/life1.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/penthouse.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -201,7 +201,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/homes/kitchenlove2.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/nature.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -211,7 +211,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/homes/kitchenlove.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/techlove.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -221,7 +221,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/homes/kitchenlove.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/kitchenlove2.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -231,7 +231,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/homes/kitchen3.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/kitchen2.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -241,7 +241,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/homes/kitchenlove3.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/livingroom.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -251,7 +251,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/homes/penthouse.jpg" alt="Product 2">
+          <img src="/Interior-Home-Design/homes/penthouse.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
