working with css

--- a/STORES/HomeStore.html
+++ b/STORES/HomeStore.html
@@ -36,7 +36,7 @@
       }
 
       .product:hover {
-          transform: translateY(-5px);
+          transform: translateY(-50px);
       }
 
       .product img {
@@ -60,7 +60,7 @@
       }
 
       .product button {
-          background-color: #007bff;
+          background-color: #5c4033;
           color: #fff;
           border: none;
           padding: 10px 20px;
@@ -70,8 +70,12 @@
       }
 
       .product button:hover {
-          background-color: #0056b3;
+          background-color: #000000;
       }
+      body {
+        background-image:url(/Interior-Home-Design/homes/livingroom.jpg);
+      }
+
   </style>
 </head>
 <body>
