added social icons

--- a/STORES/HomeStore.html
+++ b/STORES/HomeStore.html
@@ -75,6 +75,23 @@
       body {
         background-image:url(/Interior-Home-Design/homes/livingroom.jpg);
       }
+      .social-icons {
+        position: fixed;
+  bottom: 10px;
+  right: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #5c4033;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(139, 20, 20, 0.1);
+}
+.social-icons img {
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
+      }
 
   </style>
 </head>
@@ -266,5 +283,13 @@
 
       <!-- Add more products as needed -->
   </div>
+  <div class="social-icons">
+    <a href="https://www.instagram.com/bryanbraide_/" target="_blank"><img src="/Interior-Home-Design/img/instagram.png" alt="instagram"></a>
+    <a href="https://youtube.com/@BryanBraide?si=dsWU5zl0NnAitpJb" target="_blank"><img src="/Interior-Home-Design/img/youtube.png" alt="youtube"></a>
+    <a href="https://twitter.com/BryanBraide_" target="_blank"><img src="/Interior-Home-Design/img/twitter (2).png" alt="twitter"></a>
+    <a href="https://github.com/Koribraide/Koribraide" target="_blank"><img src="/Interior-Home-Design/img/github.png" alt="github"></a>
+    <a href="https://www.linkedin.com/in/bryan-braide-1b7565274" target="_blank"><img src="/Interior-Home-Design/img/linkedin.png" alt="linkedin"></a>
+  </div>
+</div>
 </body>
 </html>
