--- a/STORES/HomeStore.html
+++ b/STORES/HomeStore.html
@@ -95,8 +95,19 @@
 
   </style>
 </head>
-<body>
-  <h1>Welcome to My Store</h1>
+<body class="scroll container">
+    <section> 
+        <div class="banner">
+        <div class="navbar">
+          <img src="img/logo1.png" class="logo1">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="bedroom.html">Bedroom</a></li>
+            <li><a href="dining.html">Dining</a></li>
+            <li><a href="kitchen.html">Kitchen</a></li>
+            <li><a href="backyard.html">Backyard</a></li>
+          </ul>
+        </div>
 
   <div class="container">
       <!-- Product 1 -->
@@ -291,5 +302,6 @@
     <a href="https://www.linkedin.com/in/bryan-braide-1b7565274" target="_blank"><img src="/Interior-Home-Design/img/linkedin.png" alt="linkedin"></a>
   </div>
 </div>
+</section>
 </body>
 </html>
