--- a/STORES/HomeStore.html
+++ b/STORES/HomeStore.html
@@ -99,13 +99,13 @@
     <section> 
         <div class="banner">
         <div class="navbar">
-          <img src="img/logo1.png" class="logo1">
+          <img src="/Interior-Home-Design/img/logo1.png" class="logo1">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="bedroom.html">Bedroom</a></li>
-            <li><a href="dining.html">Dining</a></li>
-            <li><a href="kitchen.html">Kitchen</a></li>
-            <li><a href="backyard.html">Backyard</a></li>
+            <li><a href="/Interior-Home-Design/index.html">Home</a></li>
+            <li><a href="/Interior-Home-Design/bedroom.html">Bedroom</a></li>
+            <li><a href="/Interior-Home-Design/dining.html">Dining</a></li>
+            <li><a href="/Interior-Home-Design/kitchen.html">Kitchen</a></li>
+            <li><a href="/Interior-Home-Design/backyard.html">Backyard</a></li>
           </ul>
         </div>
 
