--- a/STORES/HomeStore.html
+++ b/STORES/HomeStore.html
@@ -73,7 +73,7 @@
           background-color: #000000;
       }
       body {
-        background-image:url(/Interior-Home-Design/homes/livingroom.jpg);
+        background-image:url(/homes/kitchen2.jpg);
       }
       .social-icons {
         position: fixed;
