--- a/STORES/HomeStore.html
+++ b/STORES/HomeStore.html
@@ -99,20 +99,20 @@
     <section> 
         <div class="banner">
         <div class="navbar">
-          <img src="/Interior-Home-Design/img/logo1.png" class="logo1">
+          <img src="/img/logo1.png" class="logo1">
           <ul>
-            <li><a href="/Interior-Home-Design/index.html">Home</a></li>
-            <li><a href="/Interior-Home-Design/bedroom.html">Bedroom</a></li>
-            <li><a href="/Interior-Home-Design/dining.html">Dining</a></li>
-            <li><a href="/Interior-Home-Design/kitchen.html">Kitchen</a></li>
-            <li><a href="/Interior-Home-Design/backyard.html">Backyard</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/bedroom.html">Bedroom</a></li>
+            <li><a href="/dining.html">Dining</a></li>
+            <li><a href="/kitchen.html">Kitchen</a></li>
+            <li><a href="/backyard.html">Backyard</a></li>
           </ul>
         </div>
 
   <div class="container">
       <!-- Product 1 -->
       <div class="product">
-          <img src="/Interior-Home-Design/homes/kitchen1.jpg" alt="Product 1">
+          <img src="/homes/kitchen1.jpg" alt="Product 1">
           <div class="product-info">
               <h2>Product 1</h2>
               <p>Description of Product 1.</p>
@@ -123,7 +123,7 @@
 
       <!-- Product 2 -->
       <div class="product">
-          <img src="/Interior-Home-Design/homes/kitchenlove.jpg" alt="Product 2">
+          <img src="/homes/kitchenlove.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -133,7 +133,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/Interior-Home-Design/homes/dining.jpg" alt="Product 2">
+          <img src="/homes/dining.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -143,7 +143,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/Interior-Home-Design/homes/kitchenlove3.jpg" alt="Product 2">
+          <img src="/homes/kitchenlove.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -153,7 +153,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/Interior-Home-Design/homes/kitchen3.jpg" alt="Product 2">
+          <img src="/homes/kitchenlove3.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -163,7 +163,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/Interior-Home-Design/homes/penthouse.jpg" alt="Product 2">
+          <img src="/homes/penthouse.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -173,7 +173,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/Interior-Home-Design/homes/kitchenlove3.jpg" alt="Product 2">
+          <img src="/homes/kitchenlove2.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -183,7 +183,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/Interior-Home-Design/homes/life.jpg" alt="Product 2">
+          <img src="/homes/kitchenlove3.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -193,7 +193,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/Interior-Home-Design/homes/kitchenlove.jpg" alt="Product 2">
+          <img src="/homes/kitchen3.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -203,7 +203,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/Interior-Home-Design/homes/room1.jpg" alt="Product 2">
+          <img src="/homes/room1.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -213,7 +213,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/Interior-Home-Design/homes/nature.jpg" alt="Product 2">
+          <img src="/homes/nature.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -223,7 +223,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/Interior-Home-Design/homes/penthouse.jpg" alt="Product 2">
+          <img src="/homes/penthouse.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -233,7 +233,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/Interior-Home-Design/homes/nature.jpg" alt="Product 2">
+          <img src="/homes/nature.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -243,7 +243,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/Interior-Home-Design/homes/techlove.jpg" alt="Product 2">
+          <img src="/homes/techlove.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -253,7 +253,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/Interior-Home-Design/homes/kitchenlove2.jpg" alt="Product 2">
+          <img src="/homes/kitchen3.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -263,7 +263,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/Interior-Home-Design/homes/kitchen2.jpg" alt="Product 2">
+          <img src="/homes/dining.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -273,7 +273,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/Interior-Home-Design/homes/livingroom.jpg" alt="Product 2">
+          <img src="/homes/kitchenlove3.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
@@ -283,7 +283,7 @@
       </div>
         <!-- Product 2 -->
         <div class="product">
-          <img src="/Interior-Home-Design/homes/penthouse.jpg" alt="Product 2">
+          <img src="/homes/penthouse2.jpg" alt="Product 2">
           <div class="product-info">
               <h2>Product 2</h2>
               <p>Description of Product 2.</p>
