twitter img change

--- a/STORES/HomeStore.html
+++ b/STORES/HomeStore.html
@@ -297,7 +297,7 @@
   <div class="social-icons">
     <a href="https://www.instagram.com/bryanbraide_/" target="_blank"><img src="/img/instagram.png" alt="instagram"></a>
     <a href="https://youtube.com/@BryanBraide?si=dsWU5zl0NnAitpJb" target="_blank"><img src="/img/youtube.png" alt="youtube"></a>
-    <a href="https://twitter.com/BryanBraide_" target="_blank"><img src="/img/twitter (2).png (2).png" alt="twitter"></a>
+    <a href="https://twitter.com/BryanBraide_" target="_blank"><img src="/img/twitter (2).png" alt="twitter"></a>
     <a href="https://github.com/Koribraide/Koribraide" target="_blank"><img src="/img/github.png" alt="github"></a>
     <a href="https://www.linkedin.com/in/bryan-braide-1b7565274" target="_blank"><img src="/img/linkedin.png" alt="linkedin"></a>
   </div>
