--- a/bedroom.html
+++ b/bedroom.html
@@ -24,8 +24,11 @@
     <div class="content">
       <h1>BEDROOMS</h1>
       <P>Elevate Your Living Spaces. Redefine luxury, comfort, and style with our exclusive home design solutions,<br> every detail is curated to reflect your distinct personality and elevate your lifestyle</P>
-      <button type="button"><span></span>SHOP NOW</button>
-      <button type="button"><span></span> CONTACT US</button>
+      <a href="/BEDROOM/bedroomstore.html">
+        <button type="button"><span></span>SHOP NOW</button>
+      </a>
+      <a href="BEDROOM/Contactus2.html">
+        <button type="button"><span></span> CONTACT US</button>
     </div>
     <div class="social-icons">
       <a href="https://www.instagram.com/bryanbraide_/" target="_blank"><img src="img/instagram.png" alt="instagram"></a>
