--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/x-icon" href="/img/HOME.png">
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="scroll-contiainer">
+<body class="scroll-container">
   <section> 
     <div class="banner">
     <div class="navbar">
