--- a/dining.html
+++ b/dining.html
@@ -23,7 +23,9 @@
     <div class="content">
       <h1>DINING</h1>
       <P>Elevate Your Living Spaces. Redefine luxury, comfort, and style with our exclusive home design solutions,<br> every detail is curated to reflect your distinct personality and elevate your lifestyle</P>
-      <button type="button"><span></span>SHOP NOW</button>
+      <a href="Interior-Home-Design/DINING/Diningstore.html">
+        <button type="button"><span></span>SHOP NOW</button>
+      </a>
       <button type="button"><span></span> CONTACT US</button>
     </div>
     <div class="social-icons">
