--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <section> 
     <div class="banner">
     <div class="navbar">
-      <img src="img/logo1.png" class="logo1">
+      <img src="/img/logo1.png" class="logo1" alt="home logo">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="bedroom.html">Bedroom</a></li>
