--- a/dining.html
+++ b/dining.html
@@ -11,7 +11,7 @@
   <section>
     <div class="banner">
     <div class="navbar">
-      <img src="img/logo1.png" class="logo1">
+      <img src="img/logo1.png" class="logo1" alt="logo1">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="bedroom.html">Bedroom</a></li>
@@ -26,7 +26,9 @@
       <a href="Interior-Home-Design/DINING/Diningstore.html">
         <button type="button"><span></span>SHOP NOW</button>
       </a>
-      <button type="button"><span></span> CONTACT US</button>
+      <a href="Interior-Home-Design/DINING/contactdining.html">
+        <button type="button"><span></span> CONTACT US</button>
+      </a>
     </div>
     <div class="social-icons">
       <a href="https://www.instagram.com/bryanbraide_/" target="_blank"><img src="img/instagram.png" alt="instagram"></a>
