--- a/BEDROOM/bedroomstore.html
+++ b/BEDROOM/bedroomstore.html
@@ -96,10 +96,10 @@
   </style>
 </head>
 <body class="scroll container">
-    <section> 
+    <section>
         <div class="banner">
         <div class="navbar">
-          <img src="/img/logo1.png" class="logo1">
+          <img src="/img/logo1.png" class="logo1" alt="logo">
           <ul>
             <li><a href="/index.html">Home</a></li>
             <li><a href="/bedroom.html">Bedroom</a></li>
