--- a/DINING/Diningstore.html
+++ b/DINING/Diningstore.html
@@ -99,7 +99,7 @@
     <section> 
         <div class="banner">
         <div class="navbar">
-          <img src="/img/logo1.png" class="logo1">
+          <img src="/img/logo1.png" class="logo1" alt="logo">
           <ul>
             <li><a href="/index.html">Home</a></li>
             <li><a href="/bedroom.html">Bedroom</a></li>
