--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="content">
       <h1>LIVING ROOM</h1>
-      <P>Elevate Your Living Spaces. Redefine luxury, comfort, and style with our exclusive home design solutions,<br> every detail is curated to reflect your distinct personality and elevate your lifestyle</P>
+      <P>Elevate Your Living Spaces. Redefine luxury, comfort, and style with our exclusive home design solutions,<br> every detail is curated to reflect your distinct personality and elevate your lifestyle 1</P>
       <a href="STORES/HomeStore.html">
         <button type="button"><span></span>SHOP NOW</button>
       </a>
@@ -31,7 +31,7 @@
       </a>
     </div>
     <div class="social-icons">
-      <a href="https://www.instagram.com/bryanbraide_/" target="_blank"><img src="img/instagram.png" alt="instagram"></a>
+      <a href="https://www.instagram.com/bryanbraide_/" target="_blank"><img src="img/instagram.png" style="max-width:100%;height:auto;" alt="instagram"></a>
       <a href="https://youtube.com/@BryanBraide?si=dsWU5zl0NnAitpJb" target="_blank"><img src="img/youtube.png" alt="youtube"></a>
       <a href="https://twitter.com/BryanBraide_" target="_blank"><img src="img/twitter (2).png" alt="twitter"></a>
       <a href="https://github.com/Koribraide/Koribraide" target="_blank"><img src="img/github.png" alt="github"></a>
