--- a/kitchen.html
+++ b/kitchen.html
@@ -11,7 +11,7 @@
   <section>
     <div class="banner">
     <div class="navbar">
-      <img src="img/logo1.png" class="logo1">
+      <img src="img/logo1.png" class="logo1" alt="logo">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="bedroom.html">Bedroom</a></li>
@@ -23,7 +23,9 @@
     <div class="content">
       <h1>KITCHEN</h1>
       <P>Elevate Your Living Spaces. Redefine luxury, comfort, and style with our exclusive home design solutions,<br> every detail is curated to reflect your distinct personality and elevate your lifestyle</P>
-      <button type="button"><span></span>SHOP NOW</button>
+      <a href="KITCHEN/kitchenstore.html">
+        <button type="button"><span></span>SHOP NOW</button>
+      </a>
       <button type="button"><span></span> CONTACT US</button>
     </div>
     <div class="social-icons">
